AppUser avatar upload with User avatar image hashes with it's id and timestamp to prevent override of files Updated @GetMapping of files with 1 subfolder of 'uploads'